fix visual overflow bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -101,7 +101,6 @@ h1 {
   display: flex;
   margin-top: 1.125em;
   align-items: center;
-  justify-content: start;
 }
 
 .todocard--button {
@@ -113,6 +112,7 @@ h1 {
   background-repeat: no-repeat;
   font-size: 1.125rem;
   flex: none;
+
 }
 
 .done {
@@ -122,7 +122,7 @@ h1 {
 
 .todocard--text {
   font-size: 1.1rem;
-  inline-size: 100%;
+  inline-size: 90%;
   overflow-wrap: break-word;
 }
 
